# GRSl2bgen

./: .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml  requirements.txt  run_docker.sh  setup.py
GRSl2bgen/: __init__.py  cdom.py  chlorophyll_a.py  mask.py  output.py  owt.py  process.py  product.py  run.py  suspended_particulate_matter.py  transparency.py
GRSl2bgen/data/: Spyrakos_et_al_2018_OWT_inland_mean_standardised.csv
notebook/: grs_l2bgen_dev.ipynb
