# pyproject.toml
[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GRSl2bgen"
version = "0.0.2"
description = "Scientific code to process GRS L2A images"
readme = "README.md"
authors = [{ name = "Tristan Harmel", email = "tristan.harmel@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["Sentinel-2","Landsat-8","Landsat-9","water quality", "EO satellite"]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
#"GRSl2bgen"= ['*.yml']
#"*"= ['data/*.nc', 'data/*.txt']

[tool.setuptools.exclude-package-data]
"*" = [".gitattributes"]

[project.scripts]
GRSl2bgen = "GRSl2bgen.run:main"

#dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/Tristanovsk/GRSl2bgen"
Documentation = "https://grs.readthedocs.io"